fix home page overflow

--- a/src/pages/Home-not-auth/style.module.scss
+++ b/src/pages/Home-not-auth/style.module.scss
@@ -5,7 +5,7 @@
 }
 
 .overflow_max {
-  width: 100vw;
+  width: 100%;
   overflow-x: hidden;
 }
 
